Tue Jan 13 12:55:58 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: In _get_eterms with an non-indexed
	  document, ensure that the document ID is set back to its original
	  value even if an exception happens in doc.prepare().

Mon Jan 12 15:08:09 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Include swig in the export.  Remove
	  search-xapian and xapian-applications from the export, since
	  they're not needed for xappy.

Mon Jan 12 14:55:46 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Updated script, which doesn't require
	  lots of pre-existing checkouts.

Fri Dec 26 15:48:27 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py: Update to
	  use the close() method on xapian databases, when this is finally
	  implemented (it's just been added to xapian trunk, but not yet
	  made its way into packages).

Tue Dec 23 00:06:15 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/query_id.py,xappy/unittests/query_id_test.py:
	  Rename to query_id.py, and test cases where only a single ID is
	  supplied.

Tue Dec 23 00:04:15 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add query_id() function to search for
	  documents with a particular ID.
	* xappy/unittests/query_id_test.py: Add test of query_id().

Mon Dec 22 20:06:09 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py: Add ProcessedDocument.get_distance() to
	  get the distance from a document to a point, or to another
	  document.
	* xappy/searchconnection.py: Add SearchConnection.calc_distance()
	  to get the distance between two points.  This is a static method,
	  because there's nothing particular to a SearchConnection used in
	  it, but it seems like the most natural place for it to go at
	  present.
